--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <table>
         <tr>
-            <td><img src="img/avatar.jpeg" alt="HE-DI Avatar" width="150px"></td>
+            <td><img src="img/avatar.png" alt="HE-DI Avatar" width="150px"></td>
             <td>
                 <h1>HE-DI</h1>
                 <p><em>Fundador & CEO de Mape.com</em></p>
